--- a/app/src/main/res/layout/activity_static_line_graph.xml
+++ b/app/src/main/res/layout/activity_static_line_graph.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_sample_list"
+    android:id="@+id/activity_static_line_graph"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="jp.team.e_works.mpandroidchartsample.activity.SampleListActivity">
+    tools:context="jp.team.e_works.mpandroidchartsample.activity.StaticLineGraphActivity">
 
-    <ListView
-        android:id="@+id/list_samples"
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chart_StaticLineGraph"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 </RelativeLayout>
