--- a/app/src/main/res/layout/activity_static_line_graph.xml
+++ b/app/src/main/res/layout/activity_static_line_graph.xml
@@ -4,10 +4,10 @@
     android:id="@+id/activity_static_line_graph"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/zero_padding"
+    android:paddingLeft="@dimen/zero_padding"
+    android:paddingRight="@dimen/zero_padding"
+    android:paddingTop="@dimen/zero_padding"
     tools:context="jp.team.e_works.mpandroidchartsample.activity.StaticLineGraphActivity">
 
     <com.github.mikephil.charting.charts.LineChart
