--- a/app/src/main/res/layout/activity_static_line_graph.xml
+++ b/app/src/main/res/layout/activity_static_line_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_static_line_graph"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,9 +11,20 @@
     android:paddingTop="@dimen/zero_padding"
     tools:context="jp.team.e_works.mpandroidchartsample.activity.StaticLineGraphActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_staticLineGraph"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:title="@string/app_name"
+        app:titleTextColor="@color/white"/>
+
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart_StaticLineGraph"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar_staticLineGraph"/>
 
 </RelativeLayout>
